--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "comp 2156 lab exercise 4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "test": "echo \"Error: no test specified\"",
+    "ci": "echo \"Error: no ci configured\""
   },
   "keywords": [],
   "author": "Sudhaa Balkaransingh",
